--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -1,2 +1,2 @@
 polar:
-  greetings: "Welcome 2 the catalog from a 'refreshed' config server"
+  greetings: "Welcome 2 the catalog from the config server"
